@@ -1,3 +1,9 @@
+2009-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/speller.c:
+   Try to make broker initialisation a bit more robust.
+
+
 2009-09-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/scplugin.c, src/scplugin.h, src/gui.c, src/gui.h, src/speller.c:
